--- a/styles/style.css
+++ b/styles/style.css
@@ -53,7 +53,7 @@ main-panel {
             padding: 1px;
 
             & h2 {
-                text-align: start;
+                text-align: center;
                 font-family: "Dreams";
                 font-weight: 1000;
                 stroke: #bb0010;
@@ -64,13 +64,14 @@ main-panel {
                 text-align: center;
                 font-family: "Dreams";
                 font-size: 43px;
-                letter-spacing: 10px;
+                letter-spacing: auto;
             }
 
             & button-container {
                 display: grid;
                 align-items: center;
                 justify-content: center;
+                padding-top: 5px;
 
                 & .activator-buttons {
                     font-family: "Comforta-Bold";
