--- a/styles/style.css
+++ b/styles/style.css
@@ -30,24 +30,26 @@
 }
 
 main-panel {
-    display: grid;
+    display: flex;
     align-items: center;
-    height: 80%;
+    height: 83%;
     width: 70%;
-    grid-template-columns: auto 60%;
-    grid-template-rows: 100%;
     background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
     backdrop-filter: blur(12px);
     border-radius: 20px;
     border: 1px solid rgba(255, 255, 255, 0.18);
     box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.6);
 
-    & mini-panel {
+    & btn-panel {
         height: 96%;
-        width: 38%;
-        margin-left: 3%;
-        margin-right: 3%;
+        width: 18%;
+        margin: 12px;
         padding: 8px;
+        background: linear-gradient(135deg, rgba(78, 95, 124, 0.1), rgba(0, 0, 0, 0));
+        backdrop-filter: blur(10px);
+        border-radius: 20px;
+        border: 1px solid rgba(255, 255, 255, 0.18);
+        box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.3);
 
         & content {
             padding: 1px;
@@ -108,21 +110,29 @@ main-panel {
             }
         }
     }
+}
 
-    & .glass {
-        background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+txtarea-panel {
+    display: grid;
+    grid-template-rows: 30% 70%;
+    height: 98%;
+    width: 82%;
+    margin: 12px;
+    padding: 8px;
+    gap: 10px;
+
+    & input-panel {
+        padding: 12px;
+        background: linear-gradient(135deg, rgba(78, 95, 124, 0.1), rgba(0, 0, 0, 0));
         backdrop-filter: blur(12px);
         border-radius: 20px;
-        border: 1px solid rgba(255, 255, 255, 0.18);
+        border: 1px solid rgba(255, 255, 255, 0.2);
         box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.3);
-    }
 
-    mini-panel-1 {
         & text-areas {
             display: flex;
             flex-direction: column;
             justify-content: center;
-            margin-left: 10px;
             font-weight: 700;
             border: none;
 
@@ -130,10 +140,10 @@ main-panel {
                 display: flex;
                 align-items: center;
                 font-family: Arial, sans-serif;
-                color: #b4b4b4;
+                color: #000000;
                 text-transform: uppercase;
-                letter-spacing: 1px;
-                font-size: 22px;
+                letter-spacing: 0.5px;
+                font-size: 24px;
 
                 & span {
                     width: 265px;
@@ -141,30 +151,36 @@ main-panel {
 
                 & input {
                     flex-grow: 1;
-                    font-family: "Nexa";
-                    overflow: hidden;
-                    margin: 12px;
-                    padding: 3px;
-                    border: none;
-                    border-radius: 10px;
-                    resize: none;
-                    font-size: 33px;
+                    font-family: "Comforta-bold";
+                    margin: 10px 0;
+                    padding: 12px 15px;
+                    border-radius: 4px;
+                    color: azure;
+                    background-color: #ffffff00;
+                    border: 3px solid rgba(0, 0, 0, 0.3);
+                    font-size: 25px;
                     width: 10em;
-                    height: 1.4em;
+                    height: 2.4em;
                 }
             }
         }
+    }
+
+    & word-panel {
+        height: 98%;
+        background: linear-gradient(135deg, rgba(78, 95, 124, 0.1), rgba(0, 0, 0, 0));
+        backdrop-filter: blur(12px);
+        border-radius: 20px;
+        border: 1px solid rgba(255, 255, 255, 0.2);
+        box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.3);
 
         word-bank {
             justify-self: center;
-            grid-column: 1/3;
             text-align: center;
             margin: 10px;
             padding: 15px;
             color: rgb(219, 219, 219);
-            border: 4px solid #ffffffb0;
             border-radius: 10px;
-            width: 90%;
 
             & h2 {
                 font-family: "Comforta-Bold";
@@ -177,12 +193,6 @@ main-panel {
             }
         }
     }
-}
-
-#toggle-visible-style {
-    /*sizing*/
-    width: 128px;
-    height: 70px;
 }
 
 #timed,
