--- a/styles/style.css
+++ b/styles/style.css
@@ -55,14 +55,39 @@ overlay {
         padding: 2rem;
         margin: 0px;
         border-radius: 8px;
-        background: white;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        background: rgba(120, 139, 151, 0.973);
+        box-shadow: 0 6px 10px rgb(0, 0, 0);
         text-align: center;
         width: 30%;
         height: 50%;
         z-index: 25;
         transform: scale(0.7);
         transition: transform var(--transition-duration) ease;
+
+        #close-modal {
+            position: absolute;
+            top: 1%;
+            right: 1%;
+            font-size: 20px;
+            text-align: center;
+            font-weight: 900;
+            border-radius: 14% 40%;
+            border: 3px rgba(25, 0, 0, 0.656) solid;
+            color: rgba(26, 26, 26, 0.908);
+            background: rgb(138, 0, 0);
+            padding: 8px 16px;
+
+            &:hover {
+                color: rgb(0, 0, 0);
+                background: rgb(114, 0, 0);
+            }
+        }
+
+        & h3 {
+            margin: 0px;
+            font-family: "Nexa";
+            text-align: left;
+        }
 
         & h2 {
             font-family: "Nexa";
@@ -73,10 +98,82 @@ overlay {
             font-weight: 600;
         }
 
-        & h3 {
-            margin: 0px;
-            font-family: "Nexa";
-            text-align: left;
+        modes {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+
+            button:first-child {
+                margin-top: 20px;
+            }
+
+            .modebtn {
+                font-family: "Comforta-Bold";
+                text-align: center;
+                font-size: 20px;
+                padding: 8px;
+                border: 3px rgba(0, 0, 0, 0.355) solid;
+                background: rgba(0, 0, 0, 0.200);
+                color: rgba(255, 255, 255, 0.908);
+                border-radius: 25px 25px;
+                width: 180px;
+                height: 70px;
+                cursor: pointer;
+
+                &.modebtn:hover {
+                    background: rgba(0, 0, 0, 0.640);
+                }
+            }
+        }
+
+        .modal-explanation {
+            overflow: auto;
+            text-rendering: optimizeLegibility;
+            background: rgba(120, 139, 151, 0.973);
+            padding: 20px;
+            border-radius: 10px;
+            position: fixed;
+            top: 6%;
+            right: 15%;
+            width: 42%;
+            height: 85%;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            text-align: center;
+
+            & h2 {
+                font-family: "Nexa";
+            }
+
+            & h3 {
+                margin: 0px;
+                font-family: "Nexa";
+                text-align: left;
+            }
+
+            & p {
+                font-family: "Comforta-bold";
+            }
+        }
+
+        #close-modal-explanation {
+            position: absolute;
+            top: 1%;
+            right: 1%;
+            border-radius: 40% 12px;
+            font-size: 16px;
+            text-align: center;
+            border-radius: 14% 40%;
+            border: 3px rgba(25, 0, 0, 0.656) solid;
+            color: rgba(26, 26, 26, 0.908);
+            background: rgb(138, 0, 0);
+            padding: 8px 16px;
+
+            &:hover {
+                color: rgb(0, 0, 0);
+                background: rgb(114, 0, 0);
+            }
         }
     }
 }
@@ -277,69 +374,6 @@ txtarea-panel {
                 }
             }
         }
-    }
-}
-
-#close-modal {
-    position: absolute;
-    top: 1%;
-    right: 1%;
-    border-radius: 14% 40%;
-    text-align: center;
-    background: rgb(138, 0, 0);
-    padding: 8px 16px;
-
-    &:hover {
-        color: rgba(255, 255, 255, 0.908);
-        background: rgb(114, 0, 0);
-    }
-}
-
-.modal-explanation {
-    overflow: auto;
-    text-rendering: optimizeLegibility;
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    position: fixed;
-    top: 6%;
-    right: 15%;
-    width: 42%;
-    height: 85%;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    text-align: center;
-
-    & h2 {
-        font-family: "Nexa";
-    }
-
-    & p {
-        font-family: "Comforta-bold";
-        font-weight: 600;
-    }
-
-    & h3 {
-        margin: 0px;
-        font-family: "Nexa";
-        text-align: left;
-    }
-}
-
-#close-modal-explanation {
-    position: absolute;
-    display: flex;
-    top: 0%;
-    right: 0%;
-    border-radius: 40% 12px;
-    text-align: center;
-    background: rgb(138, 0, 41);
-    width: 17%;
-    height: 11%;
-    justify-content: center;
-    align-items: center;
-
-    &:hover {
-        background-color: rgb(114, 0, 42);
     }
 }
 
