--- a/styles/style.css
+++ b/styles/style.css
@@ -136,17 +136,23 @@ overlay {
         }
 
         .modal-explanation {
+            position: absolute;
             overflow: auto;
             background: rgba(120, 139, 151, 0.973);
             padding: 20px;
             border-radius: 10px;
-            position: fixed;
             top: 6%;
             right: 15%;
             width: 42%;
             height: 85%;
+            opacity: 0;
+            visibility: hidden;
             box-shadow: 0 6px 10px rgb(0, 0, 0);
             text-align: center;
+            transform: translateX(20%);
+            transition: transform var(--transition-duration-short),
+                opacity var(--transition-duration-short),
+                visibility 0s var(--transition-duration-short);
 
             #close-modal-explanation {
                 position: absolute;
@@ -190,6 +196,120 @@ overlay {
                     font-family: "Comforta-bold";
                 }
             }
+        }
+    }
+
+    flash-cards {
+        position: fixed;
+        align-items: center;
+        background-color: rgb(88, 136, 139);
+        box-shadow: 0 6px 10px rgb(0, 0, 0);
+        border-radius: 10px;
+        padding: 10px;
+        width: 40vw;
+        height: 70vh;
+        z-index: 100;
+        opacity: 0;
+        visibility: hidden;
+        transform: scale(0.7);
+        transition: transform var(--transition-duration), opacity var(--transition-duration), visibility 0s var(--transition-duration);
+
+        btn-panel-modal {
+            position: absolute;
+            overflow: hidden;
+            gap: 10px;
+            width: 25%;
+            height: 55%;
+            left: -27%;
+            padding: 20px;
+            opacity: 1;
+            visibility: visible;
+            box-shadow: 0 6px 10px rgb(0, 0, 0);
+            text-align: center;
+            transform: translateX(0%);
+            transition: transform var(--transition-duration-short),
+                opacity var(--transition-duration-short),
+                visibility 0s var(--transition-duration-short);
+            background: linear-gradient(135deg, rgba(0, 238, 255, 0.1), rgba(0, 0, 0, 0));
+            backdrop-filter: blur(15px);
+            border-radius: 20px;
+            border: 1px solid rgba(255, 255, 255, 0.18);
+            box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.3);
+
+            h2 {
+                text-align: center;
+            }
+
+            btn-c {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+
+                .ctr {
+                    font-family: "Comforta-Bold";
+                    text-align: center;
+                    font-size: 20px;
+                    margin: 10px;
+                    padding: 8px;
+                    border: 3px rgba(0, 0, 0, 0.355) solid;
+                    background: rgba(0, 0, 0, 0.200);
+                    color: rgba(255, 255, 255, 0.908);
+                    border-radius: 25px 25px;
+                    width: 128px;
+                    height: 70px;
+                    cursor: pointer;
+
+                    &#sort-words-ctr {
+                        font-size: 26px;
+                    }
+
+                    &#shuffle-words-ctr:hover,
+                    #sort-words-ctr:hover {
+                        background: rgba(0, 0, 0, 0.640);
+                    }
+                }
+
+                #cntrl-panel {
+                    position: absolute;
+                    overflow: hidden;
+                    right: -15%;
+                    top: 15px;
+                    height: 90%;
+                    width: 30%;
+                    border: none;
+                    border-radius: 70%;
+                    padding: 8px 8px;
+                    font-size: 25px;
+                    text-align: start;
+                    font-weight: 900;
+                    cursor: pointer;
+                    color: rgba(255, 255, 255, 0.3);
+                    background: rgba(0, 0, 0, 0);
+                    transition: color 0.25s ease, background 0.25s ease;
+
+                    &:hover {
+                        color: rgba(255, 255, 255, 0.6);
+                        background: rgba(0, 0, 0, 0.3);
+                    }
+                }
+            }
+        }
+
+        modal-text {
+            h2 {
+                text-align: center;
+                font-size: 44px;
+                font-family: "Nexa";
+                padding: 0;
+                margin: 0;
+            }
+        }
+
+        flash-card-container {
+            position: relative;
+            display: none;
+            height: 100%;
         }
     }
 }
@@ -393,43 +513,139 @@ txtarea-panel {
     }
 }
 
-modal-text {
-    h2 {
-        text-align: center;
-        font-size: 44px;
-        font-family: "Nexa";
-        padding: 0;
-        margin: 0;
-    }
-}
-
-button-close-flash-cards,
-.randomize-cards {
-    position: absolute;
-    top: 1%;
-    right: 1%;
-    border-radius: 14% 40%;
-    cursor: pointer;
-    font-family: "Comforta-Bold";
-    text-align: center;
-    background: rgb(138, 0, 0);
-    padding: 8px 16px;
-
-    &:hover {
-        color: rgba(255, 255, 255, 0.908);
-        background: rgb(114, 0, 0);
-    }
-}
-
 button-close-flash-cards {
     right: 7px;
 }
 
-.randomize-cards {
-    left: 7px;
+body.modal-ctrl-panel {
+    btn-panel-modal {
+        opacity: 0;
+        visibility: hidden;
+        transform: translateX(130%);
+        transition: transform var(--transition-duration-short),
+            opacity var(--transition-duration-short),
+            visibility 0s var(--transition-duration-short);
+    }
 }
 
-button-close-flash-cards:hover,
-.randomize-cards:hover {
-    background-color: #af4049;
+body.modal-pick-mode-explain {
+    .modal-explanation {
+        visibility: visible;
+        opacity: 1;
+        transform: translateX(145%);
+        transition: transform var(--transition-duration-short),
+            opacity var(--transition-duration-short),
+            visibility 0s;
+    }
+}
+
+body.modal-pick-mode {
+    overlay {
+        opacity: 1;
+        visibility: visible;
+        transition: opacity var(--transition-duration);
+    }
+
+    .modal {
+        transform: scale(1);
+        transition: transform var(--transition-duration);
+    }
+}
+
+/*modal explain visibility & invisibility transition handler */
+
+
+body.modal-play-mode {
+    overlay {
+        opacity: 1;
+        visibility: visible;
+    }
+
+    flash-cards {
+        opacity: 1;
+        display: grid;
+        grid-template-rows: auto 90%;
+        visibility: visible;
+        transform: scale(1);
+        transition: transform var(--transition-duration), opacity var(--transition-duration);
+    }
+
+}
+
+arrow-container {
+
+    .prev,
+    .next {
+        cursor: pointer;
+        position: absolute;
+        top: 50%;
+        width: auto;
+        padding: 16px;
+        margin-left: 10px;
+        margin-right: 10px;
+        color: rgb(0, 0, 0);
+        font-weight: bold;
+        font-size: 28px;
+        transition: 0.2s ease;
+        user-select: none;
+    }
+
+    .prev {
+        left: 0;
+        border-radius: 0 6px 6px 0;
+    }
+
+    .next {
+        right: 0;
+        border-radius: 6px 0 0 6px;
+    }
+
+    .prev:hover,
+    .next:hover {
+        background-color: rgba(105, 105, 105, 0.8);
+    }
+}
+
+flash-card-container.active-container {
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+}
+
+.flash-card-object {
+    font-weight: bold;
+    font-family: "Nexa";
+    font-size: 55px;
+    text-align: center;
+    background-color: white;
+    border-radius: 10px;
+    display: none;
+    position: absolute;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    width: 100%;
+    height: 97%;
+    transform: translateX(0%);
+    animation: transform 0.5s linear;
+}
+
+.flash-card-object.slideInFromRight {
+    display: grid;
+    animation: slideInFromRight 0.5s linear forwards;
+}
+
+.flash-card-object.slideOutToLeft {
+    display: grid;
+    animation: slideOutToLeft 0.5s linear forwards;
+}
+
+.flash-card-object.slideInFromLeft {
+    display: grid;
+    animation: slideInFromLeft 0.5s linear forwards;
+}
+
+.flash-card-object.slideOutToRight {
+    display: grid;
+    animation: slideOutToRight 0.5s linear forwards;
 }
