--- a/styles/style.css
+++ b/styles/style.css
@@ -39,8 +39,8 @@ overlay {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
@@ -52,7 +52,7 @@ overlay {
 
     .modal {
         position: relative;
-        padding: 2rem;
+        padding: 1rem;
         margin: 0px;
         border-radius: 8px;
         background: rgba(120, 139, 151, 0.973);
@@ -324,74 +324,74 @@ main-panel {
     border-radius: 20px;
     border: 1px solid rgba(255, 255, 255, 0.18);
     box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.6);
+}
 
-    & btn-panel {
-        height: 96%;
-        width: 18%;
-        margin: 12px;
-        padding: 8px;
-        background: linear-gradient(135deg, rgba(78, 95, 124, 0.1), rgba(0, 0, 0, 0));
-        backdrop-filter: blur(10px);
-        border-radius: 20px;
-        border: 1px solid rgba(255, 255, 255, 0.18);
-        box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.3);
+btn-panel {
+    height: 96%;
+    width: 18%;
+    margin: 12px;
+    padding: 8px;
+    background: linear-gradient(135deg, rgba(78, 95, 124, 0.1), rgba(0, 0, 0, 0));
+    backdrop-filter: blur(10px);
+    border-radius: 20px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.3);
 
-        & content {
-            padding: 1px;
+    & content {
+        padding: 1px;
 
-            & h2 {
+        & h2 {
+            text-align: center;
+            font-family: "Dreams";
+            font-weight: 1000;
+            stroke: #bb0010;
+            font-size: 47px;
+        }
+
+        & p {
+            text-align: center;
+            font-family: "Dreams";
+            font-size: 43px;
+            letter-spacing: auto;
+        }
+
+        & button-container {
+            display: grid;
+            align-items: center;
+            justify-content: center;
+            padding-top: 5px;
+
+            & .activator-buttons {
+                font-family: "Comforta-Bold";
                 text-align: center;
-                font-family: "Dreams";
-                font-weight: 1000;
-                stroke: #bb0010;
-                font-size: 47px;
+                font-size: 20px;
+                margin: 10px;
+                padding: 8px;
+                border: 3px rgba(0, 0, 0, 0.355) solid;
+                background: rgba(0, 0, 0, 0.200);
+                color: rgba(255, 255, 255, 0.908);
+                border-radius: 25px 25px;
+                width: 128px;
+                height: 70px;
+                cursor: pointer;
             }
 
-            & p {
-                text-align: center;
-                font-family: "Dreams";
-                font-size: 43px;
-                letter-spacing: auto;
+            & #input-vocab,
+            #remove-one {
+                font-size: 26px;
             }
 
-            & button-container {
-                display: grid;
-                align-items: center;
-                justify-content: center;
-                padding-top: 5px;
+            & #sort-words {
+                font-size: 26px;
+            }
 
-                & .activator-buttons {
-                    font-family: "Comforta-Bold";
-                    text-align: center;
-                    font-size: 20px;
-                    margin: 10px;
-                    padding: 8px;
-                    border: 3px rgba(0, 0, 0, 0.355) solid;
-                    background: rgba(0, 0, 0, 0.200);
-                    color: rgba(255, 255, 255, 0.908);
-                    border-radius: 25px 25px;
-                    width: 128px;
-                    height: 70px;
-                    cursor: pointer;
-                }
-
-                & #input-vocab,
-                #remove-one {
-                    font-size: 26px;
-                }
-
-                & #sort-words {
-                    font-size: 26px;
-                }
-
-                & #input-vocab:hover,
-                #remove-one:hover,
-                #remove-all:hover,
-                #pick-mode:hover,
-                #shuffle-words:hover,
-                #sort-words:hover {
-                    background: rgba(0, 0, 0, 0.640);
-                }
+            & #input-vocab:hover,
+            #remove-one:hover,
+            #remove-all:hover,
+            #pick-mode:hover,
+            #shuffle-words:hover,
+            #sort-words:hover {
+                background: rgba(0, 0, 0, 0.640);
             }
         }
     }
@@ -452,6 +452,7 @@ txtarea-panel {
     }
 
     & word-panel {
+        overflow: auto;
         height: 98%;
         background: linear-gradient(135deg, rgba(78, 95, 124, 0.1), rgba(0, 0, 0, 0));
         backdrop-filter: blur(12px);
