displaying words on card bug

--- a/styles/mediaQuery.css
+++ b/styles/mediaQuery.css
@@ -54,7 +54,7 @@
 
         content button-container {
 
-            .activator-buttons {
+            .activator-btn {
                 width: 100px;
                 height: 60px;
             }
