--- a/styles/animations.css
+++ b/styles/animations.css
@@ -39,3 +39,42 @@
         transform: translateX(100%);
     }
 }
+
+/* test animations */
+@keyframes scaleOut {
+    from {
+        transform: scale(1);
+    }
+
+    to {
+        transform: scale(0.94);
+    }
+}
+
+@keyframes scaleIn {
+    from {
+        transform: scale(0.94);
+    }
+
+    to {
+        transform: scale(1);
+    }
+}
+
+@keyframes goRight {
+    0% {
+        transform: translateX(0%);
+    }
+
+    25% {
+        transform: translateX(100%);
+    }
+
+    50% {
+        transform: translateX(-100%);
+    }
+
+    100% {
+        transform: translateX(0%);
+    }
+}
